2007-07-18 Nicolas Roffet <nicolas-kde@roffet.com>
	* Added support of drag-and-drop: it's now possible to move balls and markers over the black box.

2007-07-16 Nicolas Roffet <nicolas-kde@roffet.com>
	* Revived the action "Check positions". (It was called "Done" in the KDE 3 version). Now, "Solve" is for giving up and "Check positions" is for normal game end. Added a KPushButton for this action in the left part of the game area. Motivation for this change was the feedback of different players.

2007-07-06 Nicolas Roffet <nicolas-kde@roffet.com>
	* Defined difficulty levels and used KGameDifficulty to manage them.

2007-07-01 Nicolas Roffet <nicolas-kde@roffet.com>
	* GUI: Sandbox mode is now not a configuration option anymore, it is a game mode.

2007-06-24 Nicolas Roffet <nicolas-kde@roffet.com>
	* The ending score message is now a KGamePopupItem.

2007-05-12 Nicolas Roffet <nicolas-kde@roffet.com>
	* Added a "real" tutorial.

2007-05-08 Nicolas Roffet <nicolas-kde@roffet.com>
	* Renamed the "tutorial" mode in "sandbox mode" in the code and in the settings menu as this denomination better fits.

2007-04-01 Nicolas Roffet <nicolas-kde@roffet.com>
	* Code refactoring to merge keyboard and mouse control.

2007-03-27 Nicolas Roffet <nicolas-kde@roffet.com>
	* Basic support of the keyboard reintroduced. (it has been removed on 2007-01-31.) Added a new (temporary) SVG item for the "cursor".
	* Used i18np for the GUI texts to better support plural forms.

2007-03-25 Nicolas Roffet <nicolas-kde@roffet.com>
	* GUI: Added a new widget that displays the number of balls to place and the score. Position: now on the left part of the main window.

2007-03-24 Nicolas Roffet <nicolas-kde@roffet.com>
	* GUI: Created a new widget to display in the status bar how many balls remain to be placed on the black box.

2007-03-23 Nicolas Roffet <nicolas-kde@roffet.com>
	* Preparation for Oxygenation: the element IDs in the SVG file have now better names.
